register user, verification code